# CAPTURA

./: .clang-format  .gitignore  CMakeLists.txt
calf/: BaseLogger.h  StdOutLogger.h  SyscallLogger.h
captura/: BaseLogger.h  JsonBaseLogger.h  StdOutLogger.h  StlLogger.h  SyscallLogger.h
include/: BaseLogger.h  JsonBaseLogger.h  StlLogger.h  SyscallLogger.h  constants.h
src/: BaseLogger.cpp  StlLogger.cpp  SyscallLogger.cpp
